Clear All functionality added, Remove Each Item functionality added

--- a/src/components/navbarComponent/style.css
+++ b/src/components/navbarComponent/style.css
@@ -32,7 +32,7 @@
   border-radius: 50%;
   padding-left: 5px;
   padding-right: 5px;
-  color: white;
+  color: darkgreen;
   font-size: 22px;
   font-weight: bold;
 }
